--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Yeoman generator for Automotive Grade Linux (AGL) app",
   "scripts": {
     "test": "mocha -r ts-node/register test/**/*.test.ts test/**/**/*.test.ts",
-    "build": "tsc"
+    "build": "gulp && tsc"
   },
   "files": [
     "generators/native",
@@ -27,20 +27,16 @@
   },
   "homepage": "https://github.com/ene-ilies/agl-generator-app#readme",
   "dependencies": {
-    "fs-extra": "^8.1.0",
-    "mustache": "^4.0.0"
+    "yeoman-generator": "^4.5.0"
   },
   "devDependencies": {
     "@types/chai": "^4.2.7",
-    "@types/fs-extra": "^8.0.1",
     "@types/mocha": "^5.2.7",
-    "@types/mustache": "^4.0.0",
-    "@types/sinon": "^7.5.1",
     "@types/yeoman-assert": "^3.1.1",
+    "@types/yeoman-generator": "^3.1.4",
     "@types/yeoman-test": "^2.0.3",
-    "chai": "^4.2.0",
+    "gulp": "^4.0.2",
     "mocha": "^7.0.0",
-    "sinon": "^8.1.1",
     "ts-node": "^8.6.2",
     "typescript": "^3.7.5",
     "yeoman-assert": "^3.1.1",
