--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Yeoman generator for Automotive Grade Linux (AGL) app",
   "scripts": {
     "test": "mocha -r ts-node/register test/**/*.test.ts test/**/**/*.test.ts",
+    "clean": "gulp clean",
     "build": "gulp && tsc"
   },
   "files": [
@@ -36,6 +37,7 @@
     "@types/yeoman-generator": "^3.1.4",
     "@types/yeoman-test": "^2.0.3",
     "gulp": "^4.0.2",
+    "gulp-clean": "^0.4.0",
     "mocha": "^7.0.0",
     "ts-node": "^8.6.2",
     "typescript": "^3.7.5",
