--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Yeoman generator for Automotive Grade Linux (AGL) app",
   "scripts": {
-    "test": "mocha -r ts-node/register test/**/*.test.ts test/**/**/*.test.ts",
+    "test": "mocha -r ts-node/register test/**/*.test.ts",
     "clean": "gulp clean",
     "build": "gulp && tsc"
   },
@@ -36,6 +36,7 @@
     "@types/yeoman-assert": "^3.1.1",
     "@types/yeoman-generator": "^3.1.4",
     "@types/yeoman-test": "^2.0.3",
+    "chai": "^4.2.0",
     "gulp": "^4.0.2",
     "gulp-clean": "^0.4.0",
     "mocha": "^7.0.0",
