--- a/src/web/templates/app/CMakeLists.txt.sample
+++ b/src/web/templates/app/CMakeLists.txt.sample
@@ -17,15 +17,25 @@
 ###########################################################################
 
 # Add target to project dependency list
-PROJECT_TARGET_ADD(helloworld-native-application)
+PROJECT_TARGET_ADD(helloworld-web-application)
+
+# build for prod or development
+#set(HTML_MODE prod)
+set(HTML_MODE "dev")
 
 # Define project Targets
-ADD_EXECUTABLE(${TARGET_NAME} ${TARGET_NAME}.c)
-SET_TARGET_PROPERTIES(${TARGET_NAME} PROPERTIES
-	LABELS "EXECUTABLE"
-	OUTPUT_NAME ${TARGET_NAME}
+add_custom_command(OUTPUT dist
+	DEPENDS ${TARGET_NAME}
+	WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/app
+	COMMAND npm install
+	COMMAND npm run build-${HTML_MODE}
+	COMMAND cp -r dist ${CMAKE_CURRENT_BINARY_DIR}
 )
-# Library dependencies (include updates automatically)
-TARGET_LINK_LIBRARIES(${TARGET_NAME}
-	${link_libraries}
+
+add_custom_target(${TARGET_NAME} ALL DEPENDS dist)
+
+# Binder exposes a unique public entry point
+SET_TARGET_PROPERTIES(${TARGET_NAME} PROPERTIES
+	LABELS "HTDOCS"
+	OUTPUT_NAME dist
 )
