--- a/src/web/templates/conf.d/wgt/config.xml.in
+++ b/src/web/templates/conf.d/wgt/config.xml.in
@@ -7,15 +7,18 @@
   <author>@PROJECT_AUTHOR@ &lt;@PROJECT_AUTHOR_MAIL@&gt;</author>
   <license>@PROJECT_LICENSE@</license>
 
-  <!--<feature name="urn:AGL:widget:required-permission">
-    <param name="urn:AGL:permission::public:no-htdocs" value="required" />
-  </feature>
-
   <feature name="urn:AGL:widget:required-permission">
-  <param name="urn:AGL:permission:monitor:public:get" value="required" />
+    <param name="urn:AGL:permission::public:display" value="required" />
+    <param name="urn:AGL:permission::public:audio" value="required" />"
+    <param name="urn:AGL:permission::public:no-htdocs" value="required" />
+    <param name="urn:AGL:permission:afm:system:widget" value="required" />
+    <param name="urn:AGL:permission:afm:system:runner" value="required" />
+    <param name="urn:AGL:permission::public:applications:read" value="required" />
   </feature>
 
   <feature name="urn:AGL:widget:required-api">
-     <param name="helloworld" value="ws" />
-  </feature>-->
+    <param name="windowmanager" value="ws" />
+    <param name="homescreen" value="ws" />
+    <param name="afm-main" value="ws" />
+  </feature>
 </widget>
