--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "generator-agl",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Yeoman generator for Automotive Grade Linux (AGL) app",
   "scripts": {
     "test": "mocha -r ts-node/register test/**/*.test.ts",
@@ -9,6 +9,7 @@
   },
   "files": [
     "generators/native",
+    "generators/utils",
     "generators/web"
   ],
   "repository": {
